--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,9 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.0.0"
-    def room_version = "2.1.0-alpha04"
+
+
+
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -42,10 +43,13 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
 
     // Room Components
+    def room_version = "2.1.0-alpha04"
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-coroutines:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     // LifeCycle Components (ViewModel and LiveData)
+    def lifecycle_version = "2.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
@@ -63,6 +67,13 @@ dependencies {
 
     //Constraint Layout
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+
+    // Koin for Android
+    def koin_version = "2.0.0-beta-1"
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     // Test
     testImplementation 'junit:junit:4.12'
