--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":"$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -69,15 +74,35 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
 
-    // Koin for Android
+    // Koin (Dependeny Injection)
     def koin_version = "2.0.0-beta-1"
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-androidx-scope:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    testImplementation "org.koin:koin-test:$koin_version"
 
     // Test
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
+
+    // Core library
+    androidTestImplementation 'androidx.test:core:1.1.0'
+
+    // AndroidJUnitRunner and JUnit Rules
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+
+    // Assertions
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+//    androidTestImplementation 'androidx.test.ext:truth:1.1.0'
+//    androidTestImplementation 'com.google.truth:truth:0.42'
+
+    // Espresso dependencies
+    def espresso_version = "3.1.1"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+//    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
+//    androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
+//    androidTestImplementation "androidx.test.espresso:espresso-accessibility:$espresso_version"
+//    androidTestImplementation "androidx.test.espresso:espresso-web:$espresso_version"
+//    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:$espresso_version"
+//    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
 
 }
