--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning"
+            android:theme="@style/AppTheme"
+            tools:ignore="GoogleAppIndexingWarning"
             android:fullBackupContent="@xml/backup_descriptor">
-        <activity android:name=".activities.OrderListActivity">
+        <activity android:name=".activities.MainActivity"
+                  android:label="@string/app_name"
+                  android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                     android:name="android.app.searchable"
                     android:resource="@xml/searchable"/>
@@ -26,7 +29,7 @@
 
         </activity>
         <activity android:name=".activities.OrderDetailActivity"
-                  android:parentActivityName=".activities.OrderListActivity">
+                  android:parentActivityName=".activities.MainActivity">
         </activity>
 
     </application>
