--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
     androidExtensions {
         experimental = true
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -44,8 +49,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //Kotlin Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
+    def coroutines_version = "1.2.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // Room Components
     def room_version = "2.1.0-alpha04"
@@ -59,13 +65,13 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     //AppCompat
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
 
     // Material Design
     implementation 'com.google.android.material:material:1.0.0'
 
     // Core
-    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha02'
 
     // CardView
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -75,7 +81,7 @@ dependencies {
 
 
     // Koin (Dependeny Injection)
-    def koin_version = "2.0.0-beta-4"
+    def koin_version = "2.0.1"
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-androidx-scope:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
@@ -85,19 +91,18 @@ dependencies {
 
     // TESTING DEPENDENCIES
 
-    // JUnit 4 framework
-    //testImplementation 'junit:junit:4.12'
-
     // Core library. Robolectric environment
-    testImplementation 'androidx.test:core:1.1.0'
-    androidTestImplementation 'androidx.test:core:1.1.0'
+    testImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
 
     // Mockito
     testImplementation 'org.mockito:mockito-core:2.23.0'
 
     // JUnit and Assertions
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.ext:truth:1.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.ext:truth:1.2.0'
     androidTestImplementation 'com.google.truth:truth:0.42'
 
 
@@ -105,7 +110,7 @@ dependencies {
     // Espresso dependencies
     def espresso_version = "3.1.1"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
-//    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
 //    androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
 //    androidTestImplementation "androidx.test.espresso:espresso-accessibility:$espresso_version"
 //    androidTestImplementation "androidx.test.espresso:espresso-web:$espresso_version"
